// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should AddToFavoriteBtn render correctly When authorized user adds to favorites 1`] = `
<a
  className="btn btn--list movie-card__button"
  href="/"
  onClick={[Function]}
>
  <svg
    height="20"
    viewBox="0 0 19 20"
    width="19"
  >
    <use
      xlinkHref="#add"
    />
  </svg>
  <span>
    My list
  </span>
</a>
`;

exports[`Should AddToFavoriteBtn render correctly When authorized user remove from favorites 1`] = `
<a
  className="btn btn--list movie-card__button"
  href="/"
  onClick={[Function]}
>
  <svg
    height="14"
    viewBox="0 0 18 14"
    width="18"
  >
    <use
      xlinkHref="#in-list"
    />
  </svg>
  <span>
    My list
  </span>
</a>
`;

exports[`Should AddToFavoriteBtn render correctly When guest clicks on 'MyList' button 1`] = `
<a
  className="btn btn--list movie-card__button"
  href="/login"
  onClick={[Function]}
>
  <svg
    height="20"
    viewBox="0 0 19 20"
    width="19"
  >
    <use
      xlinkHref="#add"
    />
  </svg>
  <span>
    My list
  </span>
</a>
`;
